feat(packages): qbittorrent
